meja/tests/row-expression-wrong-args.stderr
File "tests/row-expression-wrong-args.meja", line 1, characters 41-42:
Error: Incompatible types bool and int:
       Cannot unify bool and int
