meja/tests/row-expression-wrong-args.meja
let x : [< `A(bool) | `B | `C > `A] = `A(1);
